Some C++ importers/exporters (e.g. OBJ) reset file dialog Sort By mode #100887

Closed
opened 2022-09-07 20:15:41 +02:00 by Piero · 7 comments

Blender Version
Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: 0759f671ce
Worked: possibly never for some of the I/O modules written in C++

Short description of error
New Wavefront OBJ importer resets sort by in the file browser to order by name

Exact steps for others to reproduce the error
When importing an OBJ file, the new OBJ importer resets the sort by function in the File Browser to order by name.
In cases like mine, where I keep the sort by ordered by Modified Date, this new OBJ importer behavior overrides the user preferences.

Note: this is not exclusive to OBJ importer/exporter; the same seems to also be happening in: USD & STL importers, Grease Pencil SVG/PDF exporter. Does not happen in: Collada and Alembic import/export, SVG import, USD export.

**Blender Version** Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: `0759f671ce` Worked: possibly never for some of the I/O modules written in C++ **Short description of error** New Wavefront OBJ importer resets *sort by* in the file browser to order by name **Exact steps for others to reproduce the error** When importing an OBJ file, the new OBJ importer resets the *sort by* function in the File Browser to order by name. In cases like mine, where I keep the *sort by* ordered by Modified Date, this new OBJ importer behavior overrides the user preferences. Note: this is not exclusive to OBJ importer/exporter; the same seems to also be happening in: USD & STL importers, Grease Pencil SVG/PDF exporter. Does *not* happen in: Collada and Alembic import/export, SVG import, USD export.

Added subscriber: @phoenixart

Added subscriber: @phoenixart

Added subscriber: @aras_p

Added subscriber: @aras_p

Looks like this happens in some other importers/exporters too (USD import, Grease Pencil SVG/PDF import), so I'll update the title and text to cover those as well.

Looks like this happens in some other importers/exporters too (USD import, Grease Pencil SVG/PDF import), so I'll update the title and text to cover those as well.
Aras Pranckevicius changed title from New Wavefront OBJ importer resets Sort By to Some C++ importers/exporters (e.g. OBJ) reset file dialog Sort By mode 2022-09-07 20:42:31 +02:00
Aras Pranckevicius self-assigned this 2022-09-07 20:42:31 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by faccd88038

This issue was referenced by faccd880385b5ce61ca6aeacce65964becd469f5

This issue was referenced by 129993c026

This issue was referenced by 129993c026e910b83b8bc7f0a394f7a4748a2cac

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne added this to the Pipeline, Assets & IO project 2023-02-09 15:40:02 +01:00
Bastien Montagne removed this from the Pipeline, Assets & IO project 2023-02-10 12:49:18 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100887
There is no content yet.